# wecom-bot-svr

./: .gitignore  LICENSE  README.md  __init__.py  app.py  demo.py  pyproject.toml  requirements.txt
demo/: Dockerfile  demo.py
docker/: Dockerfile
src/wecom_bot_svr/: WXBizMsgCrypt3.py  __init__.py  app.py  req_msg.py  req_msg_str.py  rsp_msg.py
